k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: vllm
  labels:
    app: vllm
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: http
  type: ClusterIP
  selector:
    app: vllm
