k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: vllm
  labels:
    app: vllm
spec:
  to:
    kind: Service
    name: vllm
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
